Solved the problem of the z-index on the modals

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@ section{
   background: rgba(0, 0, 0, 0.7);
   visibility: hidden;
   opacity: 0;
-  z-index: 40;
+  z-index: 900;
 }
 .overlay:target {
   visibility: visible;
@@ -295,7 +295,7 @@ section{
 }
 
 .popup {
-  margin-top: 50px;
+  margin-top: 100px;
   margin-left: 250px;
   padding: 20px;
   background: #fff;
